--- a/playbook.yml
+++ b/playbook.yml
@@ -7,3 +7,105 @@
         state: present
         update_cache: yes
       become: yes
+
+    - name: Create ansible-worker user
+      ansible.builtin.user:
+        name: ansible-worker
+        shell: /bin/bash
+        home: /home/ansible-worker
+        state: present
+      become: yes
+
+    - name: Set ssh keys for ansible-worker user
+      ansible.posix.authorized_key:
+        user: ansible-worker
+        state: present
+        key: "{{ lookup('file', '{{ playbook_dir }}/ssh_keys/id_rsa.pub') }}"
+      become: yes
+
+    - name: Group setting for www-data user
+      ansible.builtin.file:
+        path: "/home/ansible-worker"
+        owner: www-data
+        group: ansible-worker
+      become: yes
+
+    - name: Remove github repository
+      ansible.builtin.file:
+        path: /home/ansible-worker/www/stud-template/
+        state: absent
+      become: yes
+
+    - name: Clone a github repository
+      ansible.builtin.git:
+        repo: https://github.com/iphilka/stud-template
+        dest: /home/ansible-worker/www/stud-template/
+        clone: yes
+        force: yes
+        update: yes
+      become: yes 
+    
+    - name: Copy HTML file to repo
+      ansible.builtin.copy:
+        src: "{{ playbook_dir}}/tamplates/index.html"
+        dest: /home/ansible-worker/www/stud-template/index.html
+      become: yes 
+
+    - name: Install nginx 
+      ansible.builtin.apt:
+        name: nginx
+        state: present
+        update_cache: yes
+      become: yes 
+
+    - name: Set permissions for www-data user
+      ansible.builtin.file:
+        path: "/home/ansible-worker/www"
+        owner: www-data
+        group: ansible-worker
+        mode: "0755"
+        recurse: yes
+      become: yes 
+
+    - name: Apply new site
+      ansible.builtin.template:
+        src: "{{ playbook_dir}}/tamplates/ansible.iphilka.ru.conf"
+        dest: /etc/nginx/sites-available/ansible.iphilka.ru.conf
+        owner: www-data
+        group: root
+        mode: '0644'
+      notify: Restart nginx
+      become: yes 
+
+    - name: Enable new site
+      ansible.builtin.file:
+        src: /etc/nginx/sites-available/ansible.iphilka.ru.conf
+        dest: /etc/nginx/sites-enabled/ansible.iphilka.ru.conf
+        state: link
+      notify: Restart nginx
+      become: yes 
+
+    - name: Get nginx access log
+      command: tail -n 100 /var/log/nginx/access.log
+      register: nginx_access_log
+      become: yes 
+
+    - name: Get nginx error log
+      command: tail -n 100 /var/log/nginx/error.log
+      register: nginx_error_log
+      become: yes 
+
+    - name: Display nginx access log
+      debug:
+        var: nginx_access_log.stdout_lines
+
+    - name: Display nginx error log
+      debug:
+        var: nginx_error_log.stdout_lines
+
+  handlers:
+    - name: Restart nginx
+      ansible.builtin.service:
+        name: nginx
+        state: reloaded
+      become: yes
